@@ -2,16 +2,16 @@ package mcjty.arienteworld.biomes;
 
 import mcjty.arienteworld.dimension.features.IFeature;
 import mcjty.arienteworld.dimension.features.SpheresFeature;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.world.World;
+import mcjty.arienteworld.setup.ModSetup;
+import net.minecraft.world.biome.Biome;
 
 import java.util.HashMap;
 import java.util.Map;
-import java.util.Random;
 
 public class BiomeArienteCity extends AbstractArienteBiome {
 
     private static final Map<String, Double> FEATURE_STRENGTHS = new HashMap<>();
+
 
     static {
         FEATURE_STRENGTHS.put(SpheresFeature.FEATURE_SPHERES, 0.0);
@@ -23,6 +23,8 @@ public class BiomeArienteCity extends AbstractArienteBiome {
         this.decorator.extraTreeChance = 0;
         this.decorator.flowersPerChunk = 0;
         this.decorator.grassPerChunk = 0;
+        this.spawnableMonsterList.add(new Biome.SpawnListEntry(ModSetup.arienteSystem.getSoldierClass(), 95, 4, 4));
+        this.spawnableMonsterList.add(new Biome.SpawnListEntry(ModSetup.arienteSystem.getMasterSoldierClass(), 5, 1, 1));
     }
 
     @Override
