@@ -2,6 +2,7 @@ Upcoming
 - Worldgen enhancements: random biome dependend features on the terrain
 - New city biome
 - Fixed a problem with underground station not being generated when there was a floating city above it
+- Added support for mob spawners to cities and added solider spawning to some of the Ariente biomes
 
 0.0.22-alpha:
 - Fixed another problem with generated flux levitators crashing
